--- a/412 Project/cosc412/adminLogin/adminlogin.html
+++ b/412 Project/cosc412/adminLogin/adminlogin.html
@@ -194,7 +194,7 @@ textarea {
             <input type="password" required autocomplete="off" name="password"/>
           </div>
           <button class="button button-block" type="submit"/>Log In</button>
-          <div id="goBack"><a href="../fitisbiz/home.html">Back to Fit Is Biz</a></div>
+          <div id="goBack"><a href="http://triton.towson.edu/~jray8/cosc412/fitisbiz/home.html">Back to Fit Is Biz</a></div>
           </form>
         </div>
       </div><!-- tab-content -->
