--- a/412 Project/cosc412/fitisbiz/home.html
+++ b/412 Project/cosc412/fitisbiz/home.html
@@ -57,7 +57,7 @@
                         <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo/fitlogo.png" alt="" width="100" class="img-responsive img-rounded"></a>
                         </div>
 							    <div id="schoolLogin" style="text-align:right; margin-top:25px;">
-									<button onClick="location.href = 'Http://triton.towson.edu/~vyudit1/cosc412/adminLogin/adminlogin.html';">Admin Login</button>
+									<button onClick="location.href = 'http://triton.towson.edu/~jray8/cosc412/adminLogin/adminlogin.html';">Admin Login</button>
 								</div>
                         <!-- Collect the nav links, forms, and other content for toggling -->
                       
@@ -82,7 +82,7 @@
                                         <b>JOIN NOW!</b>
                                     </span>
                                 </h2>
-                                <a href="../sign-up-login-form/clientlogin.html" class="btn custom-btn">Sign in/Register</a>
+                                <a href="http://triton.towson.edu/~jray8/cosc412/sign-up-login-form/clientlogin.html" class="btn custom-btn">Sign in/Register</a>
                              <br><br><br><br>
 							</div>
 							         
@@ -101,7 +101,7 @@
                         <div class="fun_text text-center">
                             <a href="#"><i class="fa fa-user"></i></a>
                             <span class="counter">750</span>
-                            <h6>Successful Appointments</h6>
+                            <h6>Successful Atheles </h6>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4">
