--- a/412 Project/cosc412/sign-up-login-form/clienthome.html
+++ b/412 Project/cosc412/sign-up-login-form/clienthome.html
@@ -93,7 +93,7 @@
       <p style="padding-top:5px;"><a href="..." style="color:#686868;">Search Health Professional</a></p><br>	  
       <p style="padding-top:5px;"><a href="..." style="color:#686868;">Play Game</a></p><br>
 	  <p style="padding-top:5px;"><a href="enterUser.html" style="color:#686868;">Edit Account Details</a></p><br>
-      <p style="padding-top:5px;"><a href="..//home.html" style="color:#686868;">Logout</a></p>	  
+      <p style="padding-top:5px;"><a href="http://triton.towson.edu/~jray8/cosc412/sign-up-login-form/clientlogin.html" style="color:#686868;">Logout</a></p>	  
 	  <hr style="color:black;"><br></div>
     </div>
     <div class="col-sm-8 text-left"  style="height:100%"> 
