--- a/412 Project/cosc412/adminLogin/adminhome.html
+++ b/412 Project/cosc412/adminLogin/adminhome.html
@@ -194,6 +194,6 @@ textarea {
 
 	  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="js/index.js"></script>
-	<div id="backtohome" style="margin-left:10%;margin-top:25px;"><a href="../fitisbiz/home.html"  style="text-decoration:none;font-size:18px;">Log out</a></div>
+	<div id="backtohome" style="margin-left:10%;margin-top:25px;"><a href="http://triton.towson.edu/~jray8/cosc412/fitisbiz/home.html"  style="text-decoration:none;font-size:18px;">Log out</a></div>
 </body>
 </html>
