--- a/412 Project/cosc412/sign-up-login-form/clientlogin.html
+++ b/412 Project/cosc412/sign-up-login-form/clientlogin.html
@@ -266,7 +266,7 @@
                      <input type="password" required autocomplete="off" id="confirmpassword" name="confirmpassword" oninput="check(this)"/>
                   </div>
                   <button type="submit" class="button button-block"/>Sign Up</button>
-                  <div id="goBack"><a href="../fitisbiz/home.html" id="goBack2">Back to Fit is Biz Home</a></div>
+                  <div id="goBack"><a href="http://triton.towson.edu/~jray8/cosc412/fitisbiz/home.html" id="goBack2">Back to Fit is Biz Home</a></div>
                </form>
             </div>
             <div id="login">
@@ -288,7 +288,7 @@
                      <input type="password"required autocomplete="off" name="password"/>
                   </div>
                   <button class="button button-block"/>Log In</button>
-                  <div id="goBack"><a href="../fitisbiz/home.html" id="goBack">Back to Fit is Biz Home</a></div>
+                  <div id="goBack"><a href="http://triton.towson.edu/~jray8/cosc412/fitisbiz/home.html" id="goBack">Back to Fit is Biz Home</a></div>
                </form>
             </div>
          </div>
