--- a/412 Project/cosc412/sign-up-login-form/clienthome.html
+++ b/412 Project/cosc412/sign-up-login-form/clienthome.html
@@ -152,16 +152,16 @@
 	<div class="col-sm-2 sidenav"  style="padding-top:20px">
       
 	  <div class="well">
-		<div id="fb" ><div class="fb-post" data-href="https://www.facebook.com/ScheduSchool/posts/296923124097920" data-width="100" data-show-text="true"  ><blockquote cite="https://www.facebook.com/ScheduSchool/posts/296923124097920" class="fb-xfbml-parse-ignore"	><p style="font-size:12px;" >Welcome to FitisBiz! Facebook</p><a href="https://www.facebook.com/ScheduSchool/"  style="font-size:12px;" >@FitisBiz_Facebook</a> </div></div>
+		<div id="fb" ><div class="fb-post" data-href="https://www.facebook.com" data-width="100" data-show-text="true"  ><blockquote cite="https://www.facebook.com/ScheduSchool/posts/296923124097920" class="fb-xfbml-parse-ignore"	><p style="font-size:12px;" >Welcome to FitisBiz! Facebook</p><a href="https://www.facebook.com/ScheduSchool/"  style="font-size:12px;" >@FitisBiz_Facebook</a> </div></div>
     </div>
 
 	  <div class="well">
-		<div id="fb" ><div class="fb-post" data-href="https://www.facebook.com/ScheduSchool/posts/296923124097920" data-width="100" data-show-text="true"  ><blockquote cite="https://www.facebook.com/ScheduSchool/posts/296923124097920" class="fb-xfbml-parse-ignore"	><p style="font-size:12px;" >Welcome to FitisBiz! Twitter</p><a href="https://twitter.com/fitisbiz"  style="font-size:12px;" >@FitisBiz_Twitter</a> </div></div>
+		<div id="fb" ><div class="fb-post" data-href="https://www.facebook.com" data-width="100" data-show-text="true"  ><blockquote cite="https://www.facebook.com/ScheduSchool/posts/296923124097920" class="fb-xfbml-parse-ignore"	><p style="font-size:12px;" >Welcome to FitisBiz! Twitter</p><a href="https://twitter.com/fitisbiz"  style="font-size:12px;" >@FitisBiz_Twitter</a> </div></div>
     </div>
 	
 	
 	  <div class="well">
-		<div id="fb" ><div class="fb-post" data-href="https://www.facebook.com/ScheduSchool/posts/296923124097920" data-width="100" data-show-text="true"  ><blockquote cite="https://www.facebook.com/ScheduSchool/posts/296923124097920" class="fb-xfbml-parse-ignore"><p style="font-size:12px;" >Welcome to FitisBiz! Instagram</p><a href="https://www.instagram.com/fitisbiz/"  style="font-size:12px;" >@FitisBiz_Instagram</a> </div></div>
+		<div id="fb" ><div class="fb-post" data-href="https://www.facebook.com" data-width="100" data-show-text="true"  ><blockquote cite="https://www.facebook.com/ScheduSchool/posts/296923124097920" class="fb-xfbml-parse-ignore"><p style="font-size:12px;" >Welcome to FitisBiz! Instagram</p><a href="https://www.instagram.com/fitisbiz/"  style="font-size:12px;" >@FitisBiz_Instagram</a> </div></div>
     </div>
   
 <!--PAYPAL DONAT-->  
