--- a/412 Project/cosc412/adminLogin/adminFailSignIn.html
+++ b/412 Project/cosc412/adminLogin/adminFailSignIn.html
@@ -5,53 +5,8 @@
   <title>Fail Sign In</title>
   <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/adminFailSignIn.css">
       <!--<link rel="stylesheet" href="css/style.css">-->
-	  <style>
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-html {
-  overflow-y: scroll;
-  background-color:rgba(19, 35, 47, 0.9);		
-}
-body {
-    font-family: Verdana;
-	text-align:center;
-}
-h1{
-margin-top:5%;
-color:white;
-}
-
-.button {
-  border: 0;
-  outline: none;
-  border-radius: 0;
-  padding: 10px 0;
-  font-size: 1rem;
-  font-weight: 200;
-  text-transform: uppercase;
-  letter-spacing: .1em;
-  background: #1ab188;
-  color: #ffffff;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  -webkit-appearance: none;
-}
-.button:hover, .button:focus {
-  background: #179b77;
-}
-.button-block {
-  display: block;
-  width: 50%;
-}
-
-#btn{
-margin-top:15%;
-margin-left:30%;
-}
-
-</style>
 </head>
 <body>
 <h1>Incorrect Admin Email or Password.. Try Again</h1>
