--- a/GAME STUFF/GAME/index.html
+++ b/GAME STUFF/GAME/index.html
@@ -57,6 +57,7 @@
 	<script src="code1.js"></script>
 	<script src="code2.js"></script>
 	<script src="code3.js"></script>
+	<script src="code4.js"></script>
 	<script src="pixi-renderers/pixi.js"></script>
 	<script src="pixi-renderers/pixi-filters-tools.js"></script>
 	<script src="pixi-renderers/runtimegame-pixi-renderer.js"></script>
