--- a/Basketball.html
+++ b/Basketball.html
@@ -12,6 +12,12 @@
     <style>
         .outtext { display: block; }
         .wrap { float:right; }
+        body {
+            background-image: url(http://i253.photobucket.com/albums/hh76/Umpadumpalump/bballbkg_1.png);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            padding: 10px;
+        }
     </style>
 
 </head>
