--- a/Soccer.html
+++ b/Soccer.html
@@ -9,6 +9,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         img { display:block; }
+        body {
+            background-image: url(http://i253.photobucket.com/albums/hh76/Umpadumpalump/socbkg.png);
+            background-attachment:fixed;
+            background-repeat:no-repeat;
+            padding:10px;
+        }
     </style>
 
 </head>
