--- a/412 Project/cosc412/adminLogin/healthprosubmit.html
+++ b/412 Project/cosc412/adminLogin/healthprosubmit.html
@@ -207,6 +207,12 @@
                   </div>
                   <div class="field-wrap">
                      <label>
+                     Email Address<span class="req">*</span>
+                     </label>
+                     <input type="email"required autocomplete="off" name="email"/>
+                  </div>
+                  <div class="field-wrap">
+                     <label>
                      City<span class="req">*</span>
                      </label>
                      <input type="text"required autocomplete="off" id="city" name="city"/>
