--- a/412 Project/cosc412/sign-up-login-form/editAccount.html
+++ b/412 Project/cosc412/sign-up-login-form/editAccount.html
@@ -10,7 +10,7 @@
          box-sizing: border-box;
          }
          html { 
-         background: url(images/background.jpg) no-repeat center center fixed; 
+         background: url(images/background1.png) no-repeat center center fixed; 
          -webkit-background-size: cover;
          -moz-background-size: cover;
          -o-background-size: cover;
@@ -204,69 +204,37 @@
                   <div class="top-row">
                      <div class="field-wrap">
                         <label>
-                        First Name<span class="req">*</span>
+                        Age<span class="req">*</span>
                         </label>
-                        <input type="text" required autocomplete="off" id="fname" name="fname"/>
+                        <input type="text" required autocomplete="off" id="age" name="age"/>
                      </div>
                      <div class="field-wrap">
                         <label>
-                        Last Name<span class="req">*</span>
+                        Grade<span class="req">*</span>
                         </label>
-                        <input type="text"required autocomplete="off" id="lname" name="lname"/>
+                        <input type="text"required autocomplete="off" id="grade" name="grade"/>
                      </div>
                   </div>
                   <div class="field-wrap">
                      <label>
-                     Email Address<span class="req">*</span>
+                     Sport #1<span class="req">*</span>
                      </label>
-                     <input type="email"required autocomplete="off" id="email" name="email"/>
+                     <input type="text"required autocomplete="off" id="sport1" name="sport1"/>
                   </div>
                   <div class="field-wrap">
                      <label>
-                     Phone Number<span class="req">*</span>
+                     Sport #2
                      </label>
-                     <input type="text"required autocomplete="off" id="phone" name="phone"/>
+                     <input type="text" autocomplete="off" id="sport2" name="sport2"/>
                   </div>
                   <div class="field-wrap">
                      <label>
-                     Street Address<span class="req">*</span>
+                     Sport #3
                      </label>
-                     <input type="text"required autocomplete="off" id="street" name="street"/>
-                  </div>
-                  <div class="field-wrap">
-                     <label>
-                     City<span class="req">*</span>
-                     </label>
-                     <input type="text"required autocomplete="off" id="city" name="city"/>
-                  </div>
-                  <div class="top-row">
-                     <div class="field-wrap">
-                        <label>
-                        Zip Code<span class="req">*</span>
-                        </label>
-                        <input type="number" required autocomplete="off" id="zip" name="zip"/>
-                     </div>
-                     <div class="field-wrap">
-                        <label>
-                        State<span class="req">*</span>
-                        </label>
-                        <input type="text"required autocomplete="off" id="state" name="state"/>
-                     </div>
-                  </div>
-                  <div class="field-wrap">
-                     <label>
-                     Create A Password<span class="req">*</span>
-                     </label>
-                     <input type="password" required autocomplete="off" id="password" name="password"/>
-                  </div>
-                  <div class="field-wrap">
-                     <label>
-                     Confirm Password<span class="req">*</span>
-                     </label>
-                     <input type="password" required autocomplete="off" id="confirmpassword" name="confirmpassword" oninput="check(this)"/>
+                     <input type="text" autocomplete="off" id="sport3" name="sport3"/>
                   </div>
                   <button type="submit" class="button button-block"/>Update</button>
-                  <div id="goBack"><a href="clienthome.html" id="goBack2">Back to Fit is Biz</a></div>
+                  <div id="goBack"><a href="clienthome.html" id="goBack2">Back to Profile Home</a></div>
                </form>
             </div>
             <div id="login">
