--- a/Basketball.html
+++ b/Basketball.html
@@ -13,7 +13,7 @@
         .outtext { display: block; }
         .wrap { float:right; }
         body {
-            background-image: url(http://i253.photobucket.com/albums/hh76/Umpadumpalump/bballbkg_1.png);
+            background-image: url(https://image.ibb.co/fF3fc6/bballbkg_1.jpg);
             background-repeat: no-repeat;
             background-attachment: fixed;
             padding: 10px;
