--- a/Soccer.html
+++ b/Soccer.html
@@ -10,10 +10,10 @@
     <style>
         img { display:block; }
         body {
-            background-image: url(http://i253.photobucket.com/albums/hh76/Umpadumpalump/socbkg.png);
-            background-attachment:fixed;
-            background-repeat:no-repeat;
-            padding:10px;
+            background-image: url(https://image.ibb.co/gcQFAR/socbkg.jpg);
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            padding: 10px;
         }
     </style>
 
